--- a/gravitee-gateway-services/gravitee-gateway-services-monitoring/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-monitoring/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>gravitee-gateway-services-monitoring</artifactId>
-    <name>Gravitee IO - Gateway - Services - Monitoring</name>
+    <name>Gravitee.io APIM - Gateway - Services - Monitoring</name>
 
     <dependencies>
         <!-- Gravitee.io dependencies -->
