--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-container/pom.xml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-container/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>gravitee-gateway-standalone-container</artifactId>
-    <name>Gravitee IO - Gateway - Standalone - Container</name>
+    <name>Gravitee.io APIM - Gateway - Standalone - Container</name>
 
     <build>
         <resources>
