--- a/gravitee-gateway-http-client/pom.xml
+++ b/gravitee-gateway-http-client/pom.xml
@@ -30,7 +30,7 @@
     <groupId>io.gravitee.gateway.http</groupId>
     <artifactId>gravitee-gateway-http-client</artifactId>
     <packaging>pom</packaging>
-    <name>Gravitee IO - Gateway - HTTP Client</name>
+    <name>Gravitee.io APIM - Gateway - HTTP Client</name>
 
     <modules>
         <module>gravitee-gateway-http-client-core</module>
