--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	<groupId>io.gravitee.repository</groupId>
 	<artifactId>gravitee-repository-mongodb</artifactId>
 	<version>1.2.0-SNAPSHOT</version>
-	<name>Gravitee IO - API Management - Repository MongoDB</name>
+	<name>Gravitee.io APIM - Repository - MongoDB</name>
 
 	<properties>
 		<gravitee-repository.version>1.1.0</gravitee-repository.version>
