--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	<groupId>io.gravitee.repository</groupId>
 	<artifactId>gravitee-repository-redis</artifactId>
 	<version>1.2.0-SNAPSHOT</version>
-	<name>Gravitee IO - API Management - Repository Redis</name>
+	<name>Gravitee.io APIM - Repository - Redis</name>
 
 	<properties>
 		<jedis.version>2.9.0</jedis.version>
