--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <groupId>io.gravitee.repository</groupId>
     <artifactId>gravitee-repository-test</artifactId>
     <version>1.2.0-SNAPSHOT</version>
-    <name>Gravitee IO - API Management - Test Repository</name>
+    <name>Gravitee.io APIM - Repository - Test</name>
 
     <properties>
         <gravitee-repository.version>1.1.0</gravitee-repository.version>
