--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <groupId>io.gravitee.repository</groupId>
     <artifactId>gravitee-repository</artifactId>
     <version>1.2.0-SNAPSHOT</version>
-    <name>Gravitee IO - API Management - Repository API</name>
+    <name>Gravitee.io APIM - Repository - API</name>
 
     <properties>
         <gravitee-common.version>1.0.0</gravitee-common.version>
