--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 	<version>1.2.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Gravitee IO - Gateway File Reporter</name>
+	<name>Gravitee.io APIM - Reporter - File</name>
 
 	<properties>
 		<!-- Gravitee's project versions -->
