--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <artifactId>gravitee-management-webui</artifactId>
     <version>1.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Gravitee IO - API Management - Admin - Web Console</name>
+    <name>Gravitee.io APIM - Portal</name>
 
     <build>
         <plugins>
