--- a/gravitee-management-api-security/pom.xml
+++ b/gravitee-management-api-security/pom.xml
@@ -27,7 +27,7 @@
 	</parent>
 
 	<artifactId>gravitee-management-api-security</artifactId>
-	<name>Gravitee IO - Management - Security</name>
+	<name>Gravitee.io APIM - Management - Security</name>
 
 	<dependencies>
 		<!-- Gravitee Management dependencies -->
