--- a/gravitee-management-api-services/gravitee-management-api-services-core/pom.xml
+++ b/gravitee-management-api-services/gravitee-management-api-services-core/pom.xml
@@ -29,7 +29,7 @@
 
 
     <artifactId>gravitee-management-api-services-core</artifactId>
-    <name>Gravitee IO - Management - Services - Core</name>
+    <name>Gravitee.io APIM - Management - Services - Core</name>
 
     <dependencies>
         <!-- Gravitee.io dependencies -->
