--- a/gravitee-management-api-repository/pom.xml
+++ b/gravitee-management-api-repository/pom.xml
@@ -28,7 +28,7 @@
 
 	<artifactId>gravitee-management-api-repository</artifactId>
 	<packaging>jar</packaging>
-	<name>Gravitee IO - Management - Repository</name>
+	<name>Gravitee.io APIM - Management - Repository</name>
 
 	<dependencies>
 		<!-- Gravitee.io dependencies -->
