--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <packaging>pom</packaging>
 
     <version>1.2.0-SNAPSHOT</version>
-    <name>Gravitee IO - Management</name>
+    <name>Gravitee.io APIM - Management</name>
 
     <properties>
         <gravitee-definition.version>1.1.0</gravitee-definition.version>
