--- a/gravitee-gateway-handlers/gravitee-gateway-handlers-api/pom.xml
+++ b/gravitee-gateway-handlers/gravitee-gateway-handlers-api/pom.xml
@@ -57,6 +57,24 @@
         </dependency>
 
         <dependency>
+            <groupId>io.gravitee.gateway.security</groupId>
+            <artifactId>gravitee-gateway-security-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.gateway.security</groupId>
+            <artifactId>gravitee-gateway-security-apikey</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.gateway.security</groupId>
+            <artifactId>gravitee-gateway-security-keyless</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.gravitee.repository</groupId>
             <artifactId>gravitee-repository</artifactId>
             <scope>provided</scope>
