--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
