feat(gateway): Multi-tenant support
Closes gravitee-io/issues#158

--- a/gravitee-gateway-http-client/gravitee-gateway-http-client-core/pom.xml
+++ b/gravitee-gateway-http-client/gravitee-gateway-http-client-core/pom.xml
@@ -31,6 +31,14 @@
     <name>Gravitee.io APIM - Gateway - HTTP Client - Core</name>
 
     <dependencies>
+        <!-- Gravitee dependencies -->
+        <dependency>
+            <groupId>io.gravitee.gateway</groupId>
+            <artifactId>gravitee-gateway-env</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Spring dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
