--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,6 @@
     </dependencies>
 
     <properties>
-        <gravitee-common.version>1.0.0</gravitee-common.version>
+        <gravitee-common.version>1.2.0-SNAPSHOT</gravitee-common.version>
     </properties>
 </project>
