--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "gulp-load-plugins": "~0.10.0",
     "gulp-minify-html": "~1.0.3",
     "gulp-ng-annotate": "^1.1.0",
-    "gulp-protractor": "^4.0.0",
+    "gulp-protractor": "1.0.0",
     "gulp-rename": "~1.2.2",
     "gulp-replace": "~0.5.3",
     "gulp-rev": "~5.0.0",
@@ -127,8 +127,9 @@
     "merge-stream": "~0.1.7",
     "ng-annotate-loader": "^0.0.10",
     "node-sass": "^3.4.2",
+    "phantomjs-prebuilt": "^2.1.14",
     "postcss-loader": "^0.8.0",
-    "protractor": "^5.1.1",
+    "protractor": "1.3.1",
     "require-dir": "~0.3.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
