--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
+    "skipLibCheck": true,
     "typeRoots": ["node_modules/@types/"],
     "types": [
       "angular-ui-router",
