--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
         <gravitee-plugin-core.version>1.0.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>1.0.0</gravitee-plugin-policy.version>
         <gravitee-plugin-resource.version>1.0.0</gravitee-plugin-resource.version>
-        <gravitee-policy-api.version>1.0.0</gravitee-policy-api.version>
+        <gravitee-policy-api.version>1.1.0-SNAPSHOT</gravitee-policy-api.version>
         <gravitee-gateway-api.version>1.3.0</gravitee-gateway-api.version>
         <gravitee-reporter-api.version>1.3.0</gravitee-reporter-api.version>
         <vertx.version>3.3.3</vertx.version>
