feat(apikey): The X-Gravitee-Api-Key header / api-key query parameter must be configurable
Closes gravitee-io/issues#444

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -173,3 +173,9 @@ ds:
 # Multi-tenant configuration
 # Allow only a single-value
 #tenant: europe
+
+#policy:
+# Customize the api-key header and / or query parameter
+#  api-key:
+#    header: X-Gravitee-Api-Key
+#    param: api-key
