--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -30,7 +30,10 @@
 
 # Plugins repository
 #plugins:
-#  path: ${gravitee.home}/plugins
+#  path:
+#    - ${gravitee.home}/plugins
+#    - ${gravitee.home}/my-custom-plugins
+
 # If a plugin is already installed (but with a different version), management node does not start anymore
 #  failOnDuplicate: true
 
