--- a/pom.xml
+++ b/pom.xml
@@ -151,9 +151,9 @@
         <gravitee-definition.version>1.3.0</gravitee-definition.version>
         <gravitee-common.version>1.2.0</gravitee-common.version>
         <gravitee-repository.version>1.5.0</gravitee-repository.version>
-        <gravitee-plugin-core.version>1.0.0</gravitee-plugin-core.version>
-        <gravitee-plugin-policy.version>1.0.0</gravitee-plugin-policy.version>
-        <gravitee-plugin-resource.version>1.0.0</gravitee-plugin-resource.version>
+        <gravitee-plugin-core.version>1.1.0-SNAPSHOT</gravitee-plugin-core.version>
+        <gravitee-plugin-policy.version>1.1.0-SNAPSHOT</gravitee-plugin-policy.version>
+        <gravitee-plugin-resource.version>1.1.0-SNAPSHOT</gravitee-plugin-resource.version>
         <gravitee-policy-api.version>1.1.0</gravitee-policy-api.version>
         <gravitee-gateway-api.version>1.3.0</gravitee-gateway-api.version>
         <gravitee-reporter-api.version>1.3.0</gravitee-reporter-api.version>
