--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,10 @@
 
 	<properties>
 		<jedis.version>2.9.0</jedis.version>
-		<gravitee-repository.version>1.5.0</gravitee-repository.version>
+		<gravitee-repository.version>1.6.0-SNAPSHOT</gravitee-repository.version>
 		<spring-data-redis.version>1.7.4.RELEASE</spring-data-redis.version>
 
-		<gravitee-repository-test.version>1.5.0</gravitee-repository-test.version>
+		<gravitee-repository-test.version>1.6.0-SNAPSHOT</gravitee-repository-test.version>
 		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
 	</properties>
 
