--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
     <properties>
         <gravitee-definition.version>1.3.0</gravitee-definition.version>
         <gravitee-common.version>1.3.0-SNAPSHOT</gravitee-common.version>
-        <gravitee-repository.version>1.5.0</gravitee-repository.version>
+        <gravitee-repository.version>1.6.0-SNAPSHOT</gravitee-repository.version>
         <gravitee-plugin-core.version>1.1.0-SNAPSHOT</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>1.1.0-SNAPSHOT</gravitee-plugin-policy.version>
         <gravitee-plugin-resource.version>1.1.0-SNAPSHOT</gravitee-plugin-resource.version>
