--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
 
     <groupId>io.gravitee.repository</groupId>
     <artifactId>gravitee-repository-test</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>1.8.1-SNAPSHOT</version>
     <name>Gravitee.io APIM - Repository - Test</name>
 
     <properties>
-        <gravitee-repository.version>1.7.0</gravitee-repository.version>
+        <gravitee-repository.version>1.8.1-SNAPSHOT</gravitee-repository.version>
         <commons-io.version>1.3.2</commons-io.version>
         <jackson-mapper-asl.version>1.9.13</jackson-mapper-asl.version>
         <javax.inject.version>1</javax.inject.version>
