--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/pom.xml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/pom.xml
@@ -97,6 +97,14 @@
 
         <dependency>
             <groupId>io.gravitee.gateway.services</groupId>
+            <artifactId>gravitee-gateway-services-node-healthcheck</artifactId>
+            <version>${project.version}</version>
+            <type>zip</type>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.gateway.services</groupId>
             <artifactId>gravitee-gateway-services-monitoring</artifactId>
             <version>${project.version}</version>
             <scope>runtime</scope>
@@ -148,6 +156,12 @@
                                 <artifactItem>
                                     <groupId>io.gravitee.gateway.services</groupId>
                                     <artifactId>gravitee-gateway-services-monitoring</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>io.gravitee.gateway.services</groupId>
+                                    <artifactId>gravitee-gateway-services-node-healthcheck</artifactId>
                                     <version>${project.version}</version>
                                     <type>zip</type>
                                 </artifactItem>
