--- a/gravitee-gateway-http-client/gravitee-gateway-http-client-core/pom.xml
+++ b/gravitee-gateway-http-client/gravitee-gateway-http-client-core/pom.xml
@@ -39,6 +39,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+
         <!-- Spring dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
