--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -14,6 +14,7 @@
 # Gateway HTTP server
 #http:
 #  port: 8082
+#  host: 0.0.0.0
 #  idleTimeout: 0
 #  tcpKeepAlive: true
 #  compressionSupported: false
