fix(gateway): Mixin configuration with keystore and truststore
Closes gravitee-io/issues#667

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -22,11 +22,11 @@
 #  ssl:
 #    clientAuth: false
 #    keystore:
-#      path:
-#      password:
+#      path: ${gravitee.home}/security/keystore.jks
+#      password: secret
 #    truststore:
-#      path:
-#      password:
+#      path: ${gravitee.home}/security/truststore.jks
+#      password: secret
 
 # Plugins repository
 #plugins:
