feat(gateway): Add support for HTTP/2
Closes gravitee-io/issues#673

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -20,6 +20,7 @@
 #  compressionSupported: false
 #  instances: 0
 #  secured: false
+#  alpn: false
 #  ssl:
 #    clientAuth: false
 #    keystore:
