--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
 
     <properties>
         <gravitee-definition.version>1.4.0</gravitee-definition.version>
-        <gravitee-common.version>1.3.0</gravitee-common.version>
+        <gravitee-common.version>1.4.0-SNAPSHOT</gravitee-common.version>
         <gravitee-repository.version>1.7.0</gravitee-repository.version>
         <gravitee-plugin-core.version>1.2.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>1.2.0</gravitee-plugin-policy.version>
