--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <gravitee-repository.version>1.10.0-SNAPSHOT</gravitee-repository.version>
         <gravitee-gateway-api.version>1.5.0</gravitee-gateway-api.version>
         <gravitee-fetcher-api.version>1.0.0</gravitee-fetcher-api.version>
-
+        <gravitee-expression-language.version>1.0.0-SNAPSHOT</gravitee-expression-language.version>
         <vertx.version>3.4.1</vertx.version>
         <apacheds-server-jndi.version>1.5.5</apacheds-server-jndi.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
@@ -79,6 +79,11 @@
                 <groupId>io.gravitee.common</groupId>
                 <artifactId>gravitee-common</artifactId>
                 <version>${gravitee-common.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.gravitee.el</groupId>
+                <artifactId>gravitee-expression-language</artifactId>
+                <version>${gravitee-expression-language.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.gravitee.definition</groupId>
