--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gravitee-management-webui",
-  "version": "1.8.3",
+  "version": "1.8.4-SNAPSHOT",
   "description": "Gravitee.io APIM - Portal",
   "dependencies": {
     "angular": "^1.5.0",
