--- a/pom.xml
+++ b/pom.xml
@@ -166,5 +166,6 @@
         <commons-io.version>2.5</commons-io.version>
         <commons-validator.version>1.4.1</commons-validator.version>
         <json-path.version>2.2.0</json-path.version>
+        <wiremock.version>2.8.0</wiremock.version>
     </properties>
 </project>
