--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
 	<properties>
 		<jedis.version>2.9.0</jedis.version>
-		<gravitee-repository.version>1.8.1</gravitee-repository.version>
+		<gravitee-repository.version>1.9.0-SNAPSHOT</gravitee-repository.version>
 		<spring-data-redis.version>1.7.4.RELEASE</spring-data-redis.version>
 
 		<gravitee-repository-test.version>1.8.1</gravitee-repository-test.version>
