--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,8 @@
 	<properties>
 		<jedis.version>2.9.0</jedis.version>
 		<gravitee-repository.version>1.9.0-SNAPSHOT</gravitee-repository.version>
+		<gravitee-repository-test.version>1.9.0-SNAPSHOT</gravitee-repository-test.version>
 		<spring-data-redis.version>1.7.4.RELEASE</spring-data-redis.version>
-
-		<gravitee-repository-test.version>1.8.1</gravitee-repository-test.version>
 		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
 	</properties>
 
