--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -194,7 +194,7 @@ security:
 email:
   enabled: false
   host: smtp.my.domain
-  subject: [Gravitee.io] %s
+  subject: "[Gravitee.io] %s"
 #  port: 465
   from: noreply@my.domain
   username: user@my.domain
