feat(node): Add additional services to technical API for deployed API
Closes gravitee-io/issues#723

--- a/gravitee-gateway-services/gravitee-gateway-services-core/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-core/pom.xml
@@ -45,6 +45,13 @@
         </dependency>
 
         <dependency>
+            <groupId>io.gravitee.gateway.handlers</groupId>
+            <artifactId>gravitee-gateway-handlers-api</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>io.gravitee.common</groupId>
             <artifactId>gravitee-common</artifactId>
         </dependency>
