feat(healthcheck): Store more information in case of HC fail
Closes gravitee-io/issues#813

--- a/gravitee-gateway-services/gravitee-gateway-services-healthcheck/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-healthcheck/pom.xml
@@ -102,6 +102,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-unit</artifactId>
+            <version>${vertx.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- HTTP mock -->
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
