feat(cors): Add CORS specification
Closes gravitee-io/issues#825

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,6 @@
     </dependencies>
 
     <properties>
-        <gravitee-common.version>1.5.0</gravitee-common.version>
+        <gravitee-common.version>1.6.0-SNAPSHOT</gravitee-common.version>
     </properties>
 </project>
