--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
 
 	<properties>
 		<!-- Gravitee's project versions -->
-		<gravitee-gateway-api.version>1.1.0</gravitee-gateway-api.version>
-		<gravitee-reporter-api.version>1.1.0</gravitee-reporter-api.version>
+		<gravitee-gateway-api.version>1.5.0</gravitee-gateway-api.version>
+		<gravitee-reporter-api.version>1.8.0-SNAPSHOT</gravitee-reporter-api.version>
 		<gravitee-common.version>1.0.0</gravitee-common.version>
 
 		<!-- External project versions -->
