--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
 	<name>Gravitee.io APIM - Repository - MongoDB</name>
 
 	<properties>
-		<gravitee-repository.version>1.10.0</gravitee-repository.version>
-		<gravitee-repository-test.version>1.10.0</gravitee-repository-test.version>
+		<gravitee-repository.version>1.11.0-SNAPSHOT</gravitee-repository.version>
+		<gravitee-repository-test.version>1.11.0-SNAPSHOT</gravitee-repository-test.version>
 		<embed.mongo.version>1.50.5</embed.mongo.version>
 		<mongo.version>3.4.2</mongo.version>
 		<spring.data.mongodb.version>1.7.2.RELEASE</spring.data.mongodb.version>
