--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
         <gravitee-definition.version>1.7.0</gravitee-definition.version>
         <gravitee-common.version>1.6.0</gravitee-common.version>
         <gravitee-expression-language.version>1.0.0</gravitee-expression-language.version>
-        <gravitee-repository.version>1.10.0</gravitee-repository.version>
+        <gravitee-repository.version>1.11.0-SNAPSHOT</gravitee-repository.version>
         <gravitee-plugin-core.version>1.3.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>1.3.0</gravitee-plugin-policy.version>
         <gravitee-plugin-resource.version>1.3.0</gravitee-plugin-resource.version>
