feat(monitoring): Add endpoint to technical API
Closes gravitee-io/issues#936

--- a/gravitee-gateway-services/gravitee-gateway-services-monitoring/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-monitoring/pom.xml
@@ -86,6 +86,13 @@
             <version>${jackson.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Vert.x -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
