chore: Set default local configuration for ES connector over HTTP
Closes gravitee-io/issues#937

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -111,8 +111,8 @@ reporters:
   # Elasticsearch reporter
   elasticsearch:
     enabled: true # Is the reporter enabled or not (default to true)
-    hosts:
-      - ${ds.elastic.host}:${ds.elastic.port}
+    endpoints:
+      - http://${ds.elastic.host}:${ds.elastic.port}
 #    index: gravitee
 #    cluster: elasticsearch
 #    bulk:
@@ -183,7 +183,7 @@ ds:
     port: ${GRAVITEEIO_MONGODB_PORT:27017}
   elastic:
     host: ${GRAVITEEIO_ELASTIC_HOST:localhost}
-    port: ${GRAVITEEIO_ELASTIC_PORT:9300}
+    port: ${GRAVITEEIO_ELASTIC_PORT:9200}
 
 # Sharding tags configuration
 # Allows to define inclusion/exclusion sharding tags to only deploy a part of APIs. To exclude just prefix the tag with '!'.
