--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/gravitee-management-api-standalone-distribution-zip/pom.xml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/gravitee-management-api-standalone-distribution-zip/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>io.gravitee.management.standalone</groupId>
 		<artifactId>gravitee-management-api-standalone-distribution</artifactId>
-		<version>1.12.2</version>
+		<version>1.13.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>gravitee-management-api-standalone-distribution-zip</artifactId>
