--- a/gravitee-gateway-handlers/gravitee-gateway-handlers-api/pom.xml
+++ b/gravitee-gateway-handlers/gravitee-gateway-handlers-api/pom.xml
@@ -75,6 +75,18 @@
         </dependency>
 
         <dependency>
+            <groupId>io.gravitee.gateway.security</groupId>
+            <artifactId>gravitee-gateway-security-oauth2</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.gateway.security</groupId>
+            <artifactId>gravitee-gateway-security-jwt</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.gravitee.repository</groupId>
             <artifactId>gravitee-repository</artifactId>
             <scope>provided</scope>
