--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -169,6 +169,8 @@ security:
 #      user-search-base: "o=user accounts"
       # The LDAP filter used to search for users (optional). For example "(uid={0})". The substituted parameter is the user's login name.
 #      user-search-filter: "mail={0}"
+      # The objectclass used when searching for user (optional). Default is "person".
+#      user-search-objectclass: "person"
       # The search base for group membership searches. Defaults to "".
 #      group-search-base: "o=authorization groups"
       # The LDAP filter to search for groups. Defaults to "(uniqueMember={0})". The substituted parameter is the DN of the user.
