--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
 
     <properties>
         <gravitee-definition.version>1.8.0</gravitee-definition.version>
-        <gravitee-common.version>1.8.0</gravitee-common.version>
+        <gravitee-common.version>1.8.1-SNAPSHOT</gravitee-common.version>
         <gravitee-expression-language.version>1.0.0</gravitee-expression-language.version>
         <gravitee-repository.version>1.12.0</gravitee-repository.version>
         <gravitee-plugin-core.version>1.3.0</gravitee-plugin-core.version>
