--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,10 @@
 	<name>Gravitee.io APIM - Repository - Redis</name>
 
 	<properties>
-		<gravitee-repository.version>1.12.0</gravitee-repository.version>
-		<gravitee-repository-test.version>1.12.0</gravitee-repository-test.version>
+		<gravitee-repository.version>1.13.0-SNAPSHOT</gravitee-repository.version>
+		<gravitee-repository-test.version>1.13.0-SNAPSHOT</gravitee-repository-test.version>
 		<jedis.version>2.9.0</jedis.version>
-		<spring-data-redis.version>1.7.4.RELEASE</spring-data-redis.version>
+		<spring-data-redis.version>1.8.9.RELEASE</spring-data-redis.version>
 		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
 	</properties>
 
@@ -109,13 +109,6 @@
 			<artifactId>gravitee-repository-test</artifactId>
 			<version>${gravitee-repository-test.version}</version>
 			<classifier>tests</classifier>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.github.spullara.redis</groupId>
-			<artifactId>netty4-server</artifactId>
-			<version>0.7</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
